# vm_hub_pallet

./: .gitmodules  Cargo.toml  genesis-state  genesis-wasm
node/src/: chain_spec.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
substrate-node-template/node/: Cargo.toml
substrate-node-template/node/src/: chain_spec.rs  rpc.rs
substrate-node-template/pallets/template/: Cargo.toml
substrate-node-template/pallets/template/src/: coins.rs  config.rs  consts.rs  event.rs  hooks.rs  lib.rs  storage.rs  tests.rs
substrate-node-template/runtime/: Cargo.toml
substrate-node-template/runtime/src/: lib.rs
