[package]
authors = ['Dmitry Bryuhanov <dmitrii_bryuhanov@mail.ru>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://xpdiem.com'
license = 'Unlicense'
name = 'pallet-template'
repository = 'https://github.com/xpdiem/vm_hub_pallet/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.119"  }
xp-compiler = { git = "https://github.com/xpdiem/xp-compiler/", branch = "main" }
hex = "0.4.3"

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std'
]
